PyMaker/datas/object2/RawHTML/i14501/Python_DOC_referPages.beautifulsoup-invalid-syntax-in-python-3-4-after-2to3-py.txt
<div class="post-text" itemprop="text">
<p>I am trying to install Beautiful Soup 4 in Python 3.4. I installed it from the command line, (got the invalid syntax error because I had not converted it), ran the <code>2to3.py</code> conversion script to <code>bs4</code> and now I get a new invalid syntax error.</p>
<pre><code>&gt;&gt;&gt; from bs4 import BeautifulSoup
Traceback (most recent call last):
File "&lt;pyshell#0&gt;", line 1, in &lt;module&gt;
    from bs4 import BeautifulSoup
  File "C:\Python34\bs4\__init__.py", line 30, in &lt;module&gt;
    from .builder import builder_registry, ParserRejectedMarkup
  File "C:\Python34\bs4\builder\__init__.py", line 4, in &lt;module&gt;
    from bs4.element import (
  File "C:\Python34\bs4\element.py", line 1213
    print 'Running CSS selector "%s"' % selector
                                    ^
SyntaxError: Missing parentheses in call to 'print'
</code></pre>
<p>Any ideas?</p>
</div>
<div class="post-text" itemprop="text">
<p>BeautifulSoup 4 does <strong>not</strong> need manual converting to run on Python 3. You are trying to run code only compatible with Python 2 instead; it appears you failed to correctly convert the codebase.</p>
<p>From the <a href="http://www.crummy.com/software/BeautifulSoup/">BeautifulSoup 4 homepage</a>:</p>
<blockquote>
<p>Beautiful Soup 4 works on both Python 2 (2.6+) and Python 3.</p>
</blockquote>
<p>The line now throwing the exception <em>should</em> read:</p>
<pre><code>print('Running CSS selector "%s"' % selector)
</code></pre>
<p>The codebase does use Python 2 syntax, but the <code>setup.py</code> installer converts this for you to compatible Python 3 syntax. Make sure to install the project with <code>pip</code>:</p>
<pre><code>pip install beautifulsoup4
</code></pre>
<p>or using the <code>pip</code> version bundled with Python 3.4:</p>
<pre><code>python3.4 -m pip install beautifulsoup4
</code></pre>
<p>or using <code>easy_install</code>:</p>
<pre><code>easy_install beautifulsoup4
</code></pre>
<p>If you downloaded just the tarball, <em>at the very least</em> run</p>
<pre><code>python3.4 setup.py install
</code></pre>
<p>to have the installer correctly convert the codebase for you; the converted code is <em>copied into your Python setup</em>. You can discard the downloaded source directory after running the command, see <a href="https://docs.python.org/3/install/index.html#how-installation-works"><em>How installation works</em></a>.</p>
<p>Alternatively, run:</p>
<pre><code>python3.4 setup.py build
</code></pre>
<p>and copy across the <code>build/lib</code> directory. Again, do <strong>not</strong> use the original source directory as it is left untouched.</p>
</div>
<span class="comment-copy">I originally converted it, because I was getting an invalid syntax error for the <code>except Exception, e:</code> line. Many people have encountered it and in the BeautifulSoup website it is mentioned that bs should be converted. I tried re-installing it, and now I get the <code>except Exception, e:</code> invalid syntax problem again.</span>
<span class="comment-copy">@lenakmeth: there are no <code>except Exception, e</code> lines in a correctly installed BeautifulSoup 4.3.2 that I can find. How did you install the library?</span>
<span class="comment-copy">@lenakmeth: I looked a little deeper. The original source does include that syntax, but the installer (<code>setup.py</code>) takes care of these details for you. Don't try to convert the codebase on your own.</span>
